misc: remove test job, add permissions to push job

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,31 +15,15 @@ env:
   IMAGE_NAME: wiki
 
 jobs:
-  # Run tests.
-  # See also https://docs.docker.com/docker-hub/builds/automated-testing/
-
-  test:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Run tests
-        run: |
-          if [ -f docker-compose.test.yml ]; then
-            docker-compose --file docker-compose.test.yml build
-            docker-compose --file docker-compose.test.yml run sut
-          else
-            docker build . --file dev/build/Dockerfile
-          fi
-  # Push image to GitHub Packages.
+  # Build image and push image to GitHub Packages.
   # See also https://docs.docker.com/docker-hub/builds/
   push:
-    # Ensure test job passes before pushing image.
-    needs: test
-
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
+
+    permissions:
+      contents: read
+      packages: write
 
     steps:
       - uses: actions/checkout@v2
