Feature: config.yml as ConfigMap

--- a/dev/helm/values.yaml
+++ b/dev/helm/values.yaml
@@ -12,6 +12,9 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
+# Enable offline ("air-gapped") mode, will require sideloading locale files
+offlineMode: false
+
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
@@ -92,7 +95,7 @@ postgresql:
   enabled: true
   ## ssl enforce SSL communication with PostgresSQL
   ## Default to false
-  ##  
+  ##
   # ssl: false
   ## ca Certificate of Authority
   ## Default to empty, point to location of CA
@@ -102,7 +105,7 @@ postgresql:
   ## Default to postgres
   ##
   # postgresqlHost: postgres
-  ## postgresqlPort port for postgres 
+  ## postgresqlPort port for postgres
   ## Default to 5432
   ##
   # postgresqlPort: 5432
