--- a/dev/helm/templates/deployment.yaml
+++ b/dev/helm/templates/deployment.yaml
@@ -39,9 +39,9 @@ spec:
             - name: DB_USER
               value: {{ default "wiki" .Values.postgresql.postgresqlUser }}
             - name: DB_SSL
-              value: "{{ default "false" .Values.postgresql.ssl }}"    
+              value: "{{ default "false" .Values.postgresql.ssl }}"
             - name: DB_SSL_CA
-              value: "{{ default "" .Values.postgresql.ca }}"   
+              value: "{{ default "" .Values.postgresql.ca }}"
             - name: DB_PASS
               valueFrom:
                 secretKeyRef:
@@ -51,6 +51,8 @@ spec:
                   name: {{ template "wiki.postgresql.secret" . }}
                 {{- end }}
                   key: {{ template "wiki.postgresql.secretKey" . }}
+            - name: OFFLINE_ACTIVE
+              value: "{{ default "false" .Values.offlineMode }}"
           ports:
             - name: http
               containerPort: 3000
@@ -61,6 +63,11 @@ spec:
             {{- toYaml .Values.readinessProbe | nindent 12 }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          volumeMounts:
+            - name: config
+              mountPath: /wiki/config.yml
+              subPath: config.yml
+              readOnly: true
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -73,3 +80,7 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
     {{- end }}
+      volumes:
+      - name: config
+        configMap:
+          name: {{ include "wiki.fullname" . }}-config
