--- a/dev/helm/templates/deployment.yaml
+++ b/dev/helm/templates/deployment.yaml
@@ -39,9 +39,9 @@ spec:
             - name: DB_USER
               value: {{ default "wiki" .Values.postgresql.postgresqlUser }}
             - name: DB_SSL
-              value: "{{ default "false" .Values.postgresql.ssl }}"    
+              value: "{{ default "false" .Values.postgresql.ssl }}"
             - name: DB_SSL_CA
-              value: "{{ default "" .Values.postgresql.ca }}"   
+              value: "{{ default "" .Values.postgresql.ca }}"
             - name: DB_PASS
               valueFrom:
                 secretKeyRef:
@@ -51,6 +51,12 @@ spec:
                   name: {{ template "wiki.postgresql.secret" . }}
                 {{- end }}
                   key: {{ template "wiki.postgresql.secretKey" . }}
+            - name: HA
+              {{- if le .Values.replicaCount 1 }}
+              value: "false"
+              {{- else }}
+              value: "true"
+              {{- end }}
           ports:
             - name: http
               containerPort: 3000
