Updated values file imagePullPolicy to match what is in deployment.yaml
This is the line in code we need to match: https://github.com/wjkw1/wiki/blob/dev/dev/helm/templates/deployment.yaml#L29

--- a/dev/helm/values.yaml
+++ b/dev/helm/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: requarks/wiki
-  pullPolicy: IfNotPresent
+  imagePullPolicy: IfNotPresent
 
 imagePullSecrets: []
 nameOverride: ""
