--- a/server/modules/authentication/oauth2/definition.yml
+++ b/server/modules/authentication/oauth2/definition.yml
@@ -1,6 +1,6 @@
 key: oauth2
-title: OAuth2
-description: OAuth 2.0 protocol.
+title: Generic OAuth2
+description: OAuth 2.0 is the industry-standard protocol for authorization.
 author: requarks.io
 logo: https://static.requarks.io/logo/oauth2.svg
 color: blue-grey darken-2
@@ -33,23 +33,29 @@ props:
     title: User Info Endpoint URL
     hint: User Info Endpoint URL
     order: 5
-  userId:
+  userIdClaim:
     type: String
-    title: ID
-    hint: User ID
+    title: ID Claim
+    hint: Field containing the user ID
     default: id
+    maxWidth: 500
     order: 6
-  displayName:
+  displayNameClaim:
     type: String
-    title: Display Name
-    hint: Field containing display name
+    title: Display Name Claim
+    hint: Field containing user display name
     default: displayName
     maxWidth: 500
     order: 7
   emailClaim:
     type: String
     title: Email Claim
-    hint: Field containing the email address
+    hint: Field containing the user email address
     default: email
     maxWidth: 500
     order: 8
+  logoutURL:
+    type: String
+    title: Logout URL
+    hint: (optional) Logout URL on the OAuth2 provider where the user will be redirected to complete the logout process.
+    order: 9
