fibers is not compatible with node 16.x
See https://github.com/laverdet/node-fibers readme:

  Update [April 13th, 2021] -- Fibers is not compatible with nodejs v16.0.0 or
  later. Unfortunately, v8 commit dacc2fee0f is a breaking change and
  workarounds are non-trivial.

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "homepage": "https://github.com/Requarks/wiki#readme",
   "engines": {
-    "node": ">=10.12"
+    "node": ">=10.12 <16"
   },
   "dependencies": {
     "@azure/storage-blob": "12.2.1",
