misc: fix helm push authentication

--- a/.github/workflows/helm.yml
+++ b/.github/workflows/helm.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           helm plugin install https://github.com/chartmuseum/helm-push.git
           helm repo add chartmuseum https://charts.js.wiki
-          helm cm-push dev/helm/ chartmuseum
+          helm cm-push --username="$HELM_REPO_USERNAME" --password="$HELM_REPO_PASSWORD" dev/helm/ chartmuseum
 
 #       - name: Generate and Push Chart Archive
 #         run: |
