Remove prefix from bleeding build tags
Directly use the short-sha without sha- prefix

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,15 +24,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-
       - name: Build image
         uses: docker/build-push-action@v2
         with:
           push: false
           context: .
           file: dev/build/Dockerfile
-
-
 
   # Build image and push image to GitHub Packages.
   # See also https://docs.docker.com/docker-hub/builds/
@@ -71,7 +68,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=sha
+            type=sha,prefix=
 
       - name: Disable dev flag
         if: startsWith(github.ref, 'refs/tags/v')
