--- a/dev/build-arm/Dockerfile
+++ b/dev/build-arm/Dockerfile
@@ -1,9 +1,9 @@
 # =========================
 # --- BUILD NPM MODULES ---
 # =========================
-FROM node:16-alpine AS build
+FROM node:14-alpine AS build
 
-RUN apk add yarn g++ make python3 --no-cache
+RUN apk add yarn g++ make python3 sqlite --no-cache
 
 WORKDIR /wiki
 
@@ -14,7 +14,7 @@ RUN yarn --production --frozen-lockfile --non-interactive --network-timeout 1000
 # ===============
 # --- Release ---
 # ===============
-FROM node:16-alpine
+FROM node:14-alpine
 LABEL maintainer="requarks.io"
 
 RUN apk add bash curl git openssh gnupg sqlite --no-cache && \
