--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
 
     steps:
     - uses: actions/checkout@v2
@@ -113,6 +115,8 @@ jobs:
     name: ARM Build
     runs-on: ubuntu-latest
     needs: [cypress]
+    permissions:
+      packages: write
     
     steps:
     - uses: actions/checkout@v2
